Habe was gemacht

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-SAB is a fairly simple business simulator that's developed by a bunch of unmotivated students solely for the purpose of passing a class.
+SAB is a fairly simple business simulator that's developed by a bunch of unmotivated students solely for the purpose of passing a class. Und ich bin der Chef!
